# fdagster

./: .gitignore  LICENSE  dagster.yaml  local-workspace.yaml  pyproject.toml  workspace.yaml
data/: __init__.py
data/banking/: asset.py  load.py
data/smart_cities/: asset.py
docker/: Dockerfile.CodeLocation  Dockerfile.Daemon  Dockerfile.Dagit  docker-compose.yaml
k8s/: deployment-code-location.yaml
scripts/: create-deployments.sh  create-docker-images.sh  start.sh  stop.sh
