[tool.poetry]
name = "fdagster"
version = "0.1.0"
description = ""
authors = ["Lucas Cardoso"]
readme = "README.md"
packages = [{include = "src"}]


[tool.poetry.dependencies]
python = "^3.12, <3.13"
dagster = "^1.6.9"
dagit = "^1.6.9"
dagster-mysql = "^0.22.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pyright]
venvPath = "."
venv = ".venv"
